--- a/ContextTransformer.ipynb
+++ b/ContextTransformer.ipynb
@@ -481,7 +481,7 @@
     "        mask_src = (torch.zeros(num_tokens, num_tokens)).type(torch.bool)\n",
     "        \n",
     "        predicts = self.greedy_decode(src, mask_src).flatten()\n",
-    "        return [id2word[x.item()] for x in predicts]\n",
+    "        return \"\".join([id2word[x.item()] for x in predicts][1:][:-1])\n",
     "        \n",
     "    def predict_sentence(self, sentence):\n",
     "        e = sentence2id(sentence) + [self.end_idx]\n",
