--- a/ContextTransformer.ipynb
+++ b/ContextTransformer.ipynb
@@ -169,7 +169,8 @@
     "vocabs = []\n",
     "\n",
     "for sentence in tqdm(dialog):\n",
-    "    vocabs += [x.surface for x in tokenizer.tokenize(sentence)]\n",
+    "    for x in tokenizer.tokenize(sentence):\n",
+    "        vocabs.append(x.surface)\n",
     "vocabs = list(np.unique(vocabs))\n",
     "    \n",
     "vocabs += [\"<PAD>\", \"<EOS>\", \"<UNK>\", \"<BEGIN>\"]\n",
@@ -230,13 +231,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch = 1\n",
-    "batch_size = 128\n",
+    "epoch = 60\n",
+    "batch_size = 256\n",
     "\n",
     "embedding_size = 128\n",
     "nhead = 8\n",
     "\n",
-    "dim_feedforward = 128\n",
+    "dim_feedforward = 100\n",
     "num_encoder_layers = 6\n",
     "num_decoder_layers = 6\n",
     "dropout = 0.1\n",
